# xProof

./: .gitignore  .mcpregistry_registry_token  .replit  AGENT_PROOF_STANDARD.md  CHANGELOG.md  LICENSE  README.md  README.zh.md  SECURITY.md  SUBMISSION-HOWTO.md  SUBMISSIONS.md  package-lock.json  package.json  pyproject.toml  replit.md  server.json  stress-test.mjs  threat_model.md  vitest.config.ts
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  github-remote-divergence.md  npm-publish-replit.md  sdk-distribution.md
.github/workflows/: npm-sdk.yml  python-sdk.yml
.mcp/: server.json
attached_assets/: ProofMint_1760342314097.docx
clawhub-publish/: PUBLISHED.md
clawhub-publish-v140/: PUBLISHED.md
clawhub-publish-v140/xproof/: SKILL.md
clawhub-publish-v140/xproof/references/: api-reference.md  certification.md  mcp.md
clawhub-publish/xproof/: SKILL.md
clawhub-publish/xproof/references/: api-reference.md
client/: index.html
client/public/: site.webmanifest
client/src/: App.tsx  main.tsx  polyfills.ts
client/src/components/: api-keys-section.tsx  wallet-login-modal.tsx
client/src/hooks/: useAuth.ts  useWalletAuth.ts
client/src/lib/: hashUtils.ts  multiversxTransaction.ts  walletAuth.ts
client/src/pages/: admin.tsx  agent-calibration.tsx  agent-compare.tsx  agent-context.tsx  agent-profile.tsx  agents.tsx  attestation-detail.tsx  audit.tsx  certify.tsx  dashboard.tsx  docs-4w.tsx  docs-base-violations.tsx  docs-trading.tsx  docs.tsx  incident-report.tsx  issuer-profile.tsx  landing.tsx  leaderboard.tsx  not-found.tsx  pricing.tsx  proof.tsx  settings.tsx  subscribe.tsx
contracts/: ViolationWatcher.sol  XProofViolations.sol
docs/: agent-integration.md  api-reference.md  architecture.md  deployment.md  environment-variables.md  x402.md
github-action/: README.md
github-upload/automaton/: SKILL.md
github-upload/awesome-openclaw-skills/: PR_INSTRUCTIONS.md
github-upload/plugin-xproof/: LICENSE  README.md  package.json  tsconfig.json  tsup.config.ts
github-upload/plugin-xproof/src/: client.ts  index.ts  types.ts
github-upload/xProof/: README.md
github-upload/xai-cookbook/: PR_INSTRUCTIONS.md
mcp-server/: package.json
npm-sdk/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
npm-sdk/examples/: observability.ts  vercel-ai-nextjs.ts
npm-sdk/src/: client.ts  errors.ts  hash.ts  index.ts  node-env.d.ts  parse.ts  types.ts
npm-sdk/src/integrations/: vercel.ts
npm-sdk/tests/: client.test.ts  errors.test.ts  parse.test.ts  vercel.test.ts
openclaw-skill/: README.md
openclaw-skill/xproof/: SKILL.md  claw.json  clawhub.json
pr-drafts/crewai/: PULL_REQUEST.md
pr-drafts/langchain/: PULL_REQUEST.md
pr-drafts/vercel-ai/: PULL_REQUEST.md
python-sdk/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  PR_DESCRIPTIONS.md  README.md  pyproject.toml
python-sdk/examples/: README.md  compliance_observability.py  crewai_example.py  langchain_async_chain.py
python-sdk/examples/autogen/: README.md  main.py  requirements.txt  timing_breakdown.py
python-sdk/examples/crewai-crew/: README.md  main.py  timing_breakdown.py
python-sdk/examples/deerflow/: README.md  SKILL.md  main.py  requirements.txt  xproof.yaml
python-sdk/examples/fetchai/: README.md  main.py
python-sdk/examples/langchain-chain/: README.md  certify_tool_demo.py  main.py  requirements.txt  timing_breakdown.py
python-sdk/examples/llamaindex/: README.md  main.py  requirements.txt
python-sdk/examples/openai-agents/: main.py
python-sdk/tests/: test_client.py  test_compliance_observability_example.py  test_confidence_trail.py  test_context_drift.py  test_integration.py  test_integration_policy_check.py  test_langchain_callback_demo.py  test_langchain_certify_tool_demo.py  test_langchain_tool.py  test_policy_check.py  test_version.py
python-sdk/tests/integrations/: test_autogen.py  test_crewai.py  test_deerflow.py  test_fetchai.py  test_langchain.py  test_llamaindex.py  test_openai_agents.py
python-sdk/xproof/: __init__.py  client.py  exceptions.py  langchain_tool.py  models.py  utils.py
python-sdk/xproof.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-sdk/xproof/integrations/: __init__.py  autogen.py  crewai.py  deerflow.py  fetchai.py  langchain.py  llamaindex.py  openai_agents.py
scripts/: post-merge.sh
server/: audit-trail.ts  auditSchema.ts  auth.ts  blockchain.ts  certificateGenerator.ts  credits.ts  index.ts  logger.ts  mcp.ts  metrics.ts  mx8004.ts  nativeAuth.ts  nonce.ts  pgRateLimit.ts  prerender.ts  pricing.ts  reliability.ts  replitAuth.ts  routes.ts  storage.ts  stripeClient.ts  stripePayment.ts  trust.ts  txAlerts.ts  txQueue.ts  verifyTransaction.ts  walletAuth.ts  webhook.ts  x402.ts  xmoney.ts
server/routes/: acp.ts  admin.ts  agents.ts  attestations.ts  auth.ts  calibration.ts  certifications.ts  content.ts  credits.ts  helpers.ts  keys.ts  mcp-routes.ts  mx8004.ts  pricing.ts  proof-read.ts  proof-write.ts  standard.ts  trust.ts
shared/: schema.ts  url.ts
skills/github-branch-fixes/: UPDATE_INSTRUCTIONS.md
skills/github-branch-fixes-3repos/: UPDATE_INSTRUCTIONS.md
skills/moltbot-integration/: .env.example.patch  PR_DESCRIPTION.md
skills/plugin-xproof-github/: README.md  UPDATE_INSTRUCTIONS.md  package.json
skills/registry-github/: REGISTRY_FIX.md
skills/sigil-integration/: README.md  UPDATE_INSTRUCTIONS.md
skills/xproof/: PR_INSTRUCTIONS.md  SKILL.md
skills/xproof-action-github/: README.md  UPDATE_INSTRUCTIONS.md
skills/xproof-bnbchain/: PR_INSTRUCTIONS.md  SKILL.md
skills/xproof-openclaw/: SKILL.md
skills/xproof-openclaw-github/: UPDATE_INSTRUCTIONS.md
tests/: api.test.ts  calibration-rate-limit.test.ts  loadtest.ts  mx8004.test.ts  proof-visibility.test.ts  timestamp-decomposition.test.ts
xproof-examples/: README.md
xproof-examples/fetchai/: README.md  main.py
xproof-examples/multiversx-mcp/: README.md  claude_desktop_config.json
xproof-examples/vercel/: README.md  certify-route.ts  main.ts
(+18 files in other folders)
