[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "build>=1.4.0",
    "langchain-core>=0.3.81",
    "mypy>=1.20.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "responses>=0.26.0",
    "ruff>=0.15.11",
    "twine>=6.2.0",
    "types-requests>=2.33.0.20260408",
]
