[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "build>=1.4.0",
    "langchain-core>=1.2.21",
    "mypy>=1.20.1",
    "pynacl>=1.6.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "requests>=2.33.0",
    "responses>=0.26.0",
    "ruff>=0.15.11",
    "twine>=6.2.0",
    "types-requests>=2.33.0.20260408",
    "xproof",
]

[tool.uv.workspace]
members = [
    "python-sdk",
]

[tool.uv.sources]
xproof = { workspace = true }
