[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xproof"
version = "0.2.6"
description = "Python SDK for xProof — blockchain-anchored proof-of-existence for AI agents on MultiversX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "xProof", email = "contact@xproof.app"},
]
keywords = [
    "blockchain", "multiversx", "proof-of-existence", "certification",
    "sha256", "ai-agents", "accountability", "audit-trail", "web3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.20.0",
    "ruff>=0.1.0",
]
llamaindex = [
    "llama-index-core>=0.13.0",
]
autogen = [
    "pyautogen>=0.2.0",
]
openai-agents = [
    "openai-agents>=0.0.3",
]
deerflow = []
fetchai = [
    "uagents>=0.9.0",
]

[project.urls]
Homepage = "https://xproof.app"
Repository = "https://github.com/jasonxkensei/xproof"
Documentation = "https://xproof.app/docs"
Issues = "https://github.com/jasonxkensei/xproof/issues"
Changelog = "https://github.com/jasonxkensei/xproof/releases"

[tool.setuptools.packages.find]
include = ["xproof*"]

[tool.setuptools.package-data]
xproof = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that hit the live xProof API (deselect with '-m \"not integration\"')",
]

[tool.ruff]
src = ["xproof"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (includes F811: redefinition of unused name — catches duplicate classes)
    "B",    # flake8-bugbear (opinionated bug/design-smell detection)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modern Python idioms)
]
ignore = [
    "E501", # line too long — already handled by line-length setting
]

[tool.ruff.lint.per-file-ignores]
"xproof/integrations/__init__.py" = ["F401", "I001"]  # intentional re-exports; mixed try/except blocks force non-standard import order
"tests/integrations/test_llamaindex.py" = ["E402", "I001"]  # sys.modules must be patched before importing the module under test
