[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xproof"
version = "0.2.6"
description = "Python SDK for xProof — blockchain-anchored proof-of-existence for AI agents on MultiversX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "xProof", email = "contact@xproof.app"},
]
keywords = [
    "blockchain", "multiversx", "proof-of-existence", "certification",
    "sha256", "ai-agents", "accountability", "audit-trail", "web3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "responses>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests>=2.25.0",
    "pre-commit>=3.0",
]
llamaindex = [
    "llama-index-core>=0.13.0",
]
autogen = [
    "pyautogen>=0.2.0",
]
openai-agents = [
    "openai-agents>=0.0.3",
]
deerflow = []
fetchai = [
    "uagents>=0.9.0",
]

[project.urls]
Homepage = "https://xproof.app"
Repository = "https://github.com/jasonxkensei/xproof"
Documentation = "https://xproof.app/docs"
Issues = "https://github.com/jasonxkensei/xproof/issues"
Changelog = "https://github.com/jasonxkensei/xproof/releases"

[tool.setuptools.packages.find]
include = ["xproof*"]

[tool.setuptools.package-data]
xproof = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that hit the live xProof API (deselect with '-m \"not integration\"')",
]

[tool.mypy]
files = ["xproof"]
# Supported Python range: 3.9–3.12 (mirrors the CI test matrix).
# mypy type-checks against 3.9 as the minimum target.
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["\\.pythonlibs/", "^build/", "^dist/"]

# Optional integration dependencies — each module is gated behind
# try/except ImportError in the source.  follow_imports = "skip" prevents
# mypy from traversing transitive imports in installed packages (e.g.
# langchain_core → pytest code that uses Python 3.10+ match syntax).
[[tool.mypy.overrides]]
module = [
    "autogen",         # from autogen import ConversableAgent (autogen.py)
    "crewai.*",        # from crewai.tools import BaseTool   (crewai.py)
    "langchain.*",     # from langchain.callbacks.base       (langchain.py fallback)
    "langchain_core.*", # from langchain_core.callbacks      (langchain.py, langchain_tool.py)
    "llama_index.*",   # from llama_index.core.callbacks.*   (llamaindex.py)
    "agents",          # from agents import RunHooks          (openai_agents.py)
    "agents.*",        # from agents.tracing import …        (openai_agents.py)
    "pydantic",        # from pydantic import BaseModel       (langchain_tool.py fallback)
    "pydantic.*",      # from pydantic.v1 import BaseModel   (langchain_tool.py)
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
src = ["xproof"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (includes F811: redefinition of unused name — catches duplicate classes)
    "B",    # flake8-bugbear (opinionated bug/design-smell detection)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modern Python idioms)
]
ignore = [
    "E501", # line too long — already handled by line-length setting
]

[tool.ruff.lint.per-file-ignores]
"xproof/integrations/__init__.py" = ["F401", "I001"]  # intentional re-exports; mixed try/except blocks force non-standard import order
"tests/integrations/test_llamaindex.py" = ["E402", "I001"]  # sys.modules must be patched before importing the module under test
